--- a/cash_free/static/description/index.html
+++ b/cash_free/static/description/index.html
@@ -88,7 +88,7 @@
     <div class="oe_row oe_spaced">
         <h2 class="oe_slogan" style="color:olive;">UPI Payment</h2>
         <div class="oe_demo oe_picture oe_screenshot">
-            <img src="scan_upi.png">
+            <img src="cashfree5.png">
         </div>
     </div>
 </section>
