--- a/website_file_upload_snippet/static/description/index.html
+++ b/website_file_upload_snippet/static/description/index.html
@@ -14,7 +14,7 @@
                      Features:</span>
              </h1>
             <p class="fa fa-hand-o-right" style="color:CRIMSON;font-size: 25px;">
-                <span style="color:#2dd280;font-size: 15px;">File Upload</span>
+                <span style="color:#2dd280;font-size: 15px;">File Upload and Saved at ir_attachment</span>
             </p><br/>
             <p class="fa fa-hand-o-right" style="color:CRIMSON;font-size: 25px;">
                 <span style="color:#2dd280;font-size: 15px;">Preview</span>
@@ -26,7 +26,7 @@
 
 <section class="oe_container oe_dark">
     <div class="oe_row oe_spaced">
-        <h2 class="oe_slogan" style="color:olive;">snippets</h2>
+        <h2 class="oe_slogan" style="color:olive;">Snippets</h2>
         <div class="oe_demo oe_picture oe_screenshot">
             <img src="Home-My-Website.png">
         </div>
